--- a/src/lib/project_web/templates/post/index.html.eex
+++ b/src/lib/project_web/templates/post/index.html.eex
@@ -8,6 +8,9 @@
       <th>投稿日時</th>
 
       <th></th>
+      <th></th>
+
+      <th>お気に入り数</th>
     </tr>
   </thead>
   <tbody>
@@ -24,11 +27,14 @@
       </td>
 
     <td>
-    <%= if Project.Twitter.is_favorited?(post.id, @current_user.id) do %>
+    <%= if Enum.member?(@posts_favorited_by_current_user, post.id)  do %>
       <%= link "お気に入り登録を解除する", to: Routes.post_favorite_path(@conn, :delete, post), method: :delete %>
     <% else %>
       <%= link "お気に入り登録する", to: Routes.post_favorite_path(@conn, :create, post), method: :create %>
     <% end %>
+    </td>
+    <td>
+      <%= Enum.count(post.favorites) %>
     </td>
     </tr>
 <% end %>
