--- a/src/lib/project_web/templates/post/new.html.eex
+++ b/src/lib/project_web/templates/post/new.html.eex
@@ -3,3 +3,5 @@
 <%= render "form.html", Map.put(assigns, :action, Routes.post_path(@conn, :create)) %>
 
 <span><%= link "Back", to: Routes.post_path(@conn, :index) %></span>
+
+<post-new></post-new>
