--- a/src/lib/project_web/templates/user/new.html.eex
+++ b/src/lib/project_web/templates/user/new.html.eex
@@ -3,3 +3,5 @@
 <%= render "form.html", Map.put(assigns, :action, Routes.user_path(@conn, :create)) %>
 
 <span><%= link "Back", to: Routes.user_path(@conn, :index) %></span>
+
+<user-new></user-new>
