--- a/src/lib/project_web/templates/user/show.html.eex
+++ b/src/lib/project_web/templates/user/show.html.eex
@@ -11,3 +11,5 @@
 
 <span><%= link "Edit", to: Routes.user_path(@conn, :edit, @user) %></span>
 <span><%= link "Back", to: Routes.user_path(@conn, :index) %></span>
+
+<user-show></user-show>
